ThreadSanitizer: data race [@ OnChannelConnected] vs. [@ mozilla::ipc::MessageChannel::AddProfilerMarker]
Categories
(Core :: IPC, defect)
Tracking
()
People
(Reporter: decoder, Assigned: mccr8)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
The attached crash information was detected while running CI tests with ThreadSanitizer on try revision 1fdd4f52d08fd1fb01b6c77c4a86b03af275855d.
It looks like we are racing on setting mPeerPid vs. reading it. This could cause visibility issues (update the mPeerPid is never observed) or random behavior where the correct pid is sometimes observed and sometimes not.
General information about TSan reports
Why fix races?
Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating
If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races
Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].
[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races
If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.
| Reporter | ||
Comment 1•5 years ago
|
||
| Reporter | ||
Comment 2•5 years ago
|
||
Nika, do you know what kind of synchronization is expected on mPeerPid?
It would be nice if we could prioritize this fix because any temporary suppression would be highly generic (we need to suppress both stacks and the second stack would cause us to suppress all stacks with OnChannelConnected in them).
| Assignee | ||
Comment 3•5 years ago
•
|
||
It looks like mPeerPid is otherwise only read or written to on the worker thread, but bug 1557447 added this read on the main thread. We're holding the monitor on the main thread, but not the worker thread. Maybe we could acquire the monitor in MessageChannel::OnChannelConnected()? Presumably we don't connect channels that much so hopefully it wouldn't affect performance.
Updated•5 years ago
|
| Assignee | ||
Comment 5•5 years ago
|
||
Maybe we could just compute the other pid via mListener->OtherPid(); and avoid mPeerPid altogether? I'm not sure if there's some specific reason not to do that.
| Assignee | ||
Comment 6•5 years ago
|
||
It looks like an older version of the profiler patch had the comment "NOTE: mPeerPid has slightly different behaviour from IProtocol::OtherPid (e.g. is -1 for same-process messages)", but it got changed since then to make the behavior the same as OtherPid, so that shouldn't be an issue.
| Assignee | ||
Comment 7•5 years ago
|
||
Aside from its use in AddProfilerMarker(), after initialization mPeerPid
is only used on the IO thread, so the write to it does not hold the monitor.
This means that the read in AddProfilerMarker() can cause a race, even
though we hold the monitor. This method is only called when we hold
the monitor and everything is set up, so I think we can just use
mListener->OtherPid() to get the PID.
Comment 9•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Description
•